Mise en place du menu dropdown de la nav

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/all.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" href="assets/img/PumpkinSpiceNyan.gif">
     <title>Projet 4 - Pep's</title>
@@ -14,15 +15,18 @@
     <header>
         <section>
             <a href="#"><img src="assets/img/Logo.png" alt="Logo de pep's"></a>
-            <nav>
-                <ul>
-                    <li><a href="#">accueil</a></li>
-                    <li><a href="#accompagnement">nos accompagnement</a></li>
-                    <li><a href="#">qui sommes-nous</a></li>
-                    <li><a href="#blog">blog</a></li>
-                    <li><a href="#contact">contact</a></li>
-                </ul>
-            </nav>
+            <div class="manger">
+                <i class="fa-solid fa-bars"></i>
+                <nav>
+                    <ul>
+                        <li><a href="#">accueil</a></li>
+                        <li><a href="#accompagnement">nos accompagnement</a></li>
+                        <li><a href="#">qui sommes-nous</a></li>
+                        <li><a href="#blog">blog</a></li>
+                        <li><a href="#contact">contact</a></li>
+                    </ul>
+                </nav>
+            </div>
         </section>
         <section class="banner">
             <h1>réenchantons notre vision du travail</h1>
